--- a/index.html
+++ b/index.html
@@ -48,6 +48,6 @@
         
         <p>- Ні, зовсім ні! Нашою метою є перемога України.</p>
         </div>
-    <div class="pictureBig" style="background-image: url(https://static.ukrinform.com/photos/2023_11/1700754445-729.jpg?0.22928218078163098);"></div>
+    <div class="pictureBig" style="background-clip: url(https://youtu.be/ipKdWipUJEE);"></div>
 </body>
 </html>
